--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -11,16 +11,16 @@ permissions:
   contents: write
 
 jobs:
-  get-versions:
+  fetch-versions:
     runs-on: ubuntu-latest
     outputs:
-      versions: ${{ steps.get_versions.outputs.json_versions }}
+      versions: ${{ steps.fetch-versions.outputs.json_versions }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Fetch versions
-        id: get_versions
+        id: fetch-versions
         run: |
           versions_raw=$(curl -L -s https://hub.spigotmc.org/versions/ | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V -r)
 
@@ -54,10 +54,10 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: get-versions
+    needs: fetch-versions
     strategy:
       matrix:
-        version: ${{ fromJSON(needs.get-versions.outputs.json_versions) }}
+        version: ${{ fromJSON(needs.fetch-versions.outputs.json_versions) }}
 
     steps:
       - name: Set environment variable
