--- a/SpigotBuild.yml
+++ b/SpigotBuild.yml
@@ -11,23 +11,37 @@ permissions:
   contents: write
 
 jobs:
-  get-versions:
+  fetch-versions:
     runs-on: ubuntu-latest
     outputs:
-      versions: ${{ steps.get_versions.outputs.versions }}
-    steps:
-      - name: Fetch versions
-        id: get_versions
-        run: |
-          versions=$(curl -L -s "https://hub.spigotmc.org/versions/" | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | jq -R -s 'split("\n") | .[:-1]' | tr -d '\n')
-          echo "versions=${versions}" >> $GITHUB_OUTPUT
-
-  push-readme:
-    runs-on: ubuntu-latest
-    needs: get-versions
+      versions: ${{ steps.fetch-versions.outputs.json_versions }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Fetch versions
+        id: fetch-versions
+        run: |
+          versions_raw=$(curl -L -s https://hub.spigotmc.org/versions/ | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V -r)
+
+          builds=()
+          versions=()
+
+          for version in $versions_raw; do
+              build=$(curl -L -s "https://hub.spigotmc.org/versions/${version}.json" | jq -r '.name')
+
+              if [[ ! " ${builds[@]} " =~ " ${build} " ]]; then
+                  builds+=("$build")
+                  versions+=("$version")
+              fi
+          done
+
+          json_versions=$(printf '%s\n' "${versions[@]}" | jq -R . | jq -s -c .)
+          echo "versions=${versions}" >> $GITHUB_ENV
+          echo "json_versions=${json_versions}" >> $GITHUB_OUTPUT
+
+          versions=$(curl -L -s "https://hub.spigotmc.org/versions/" | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | jq -R -s 'split("\n") | .[:-1]' | tr -d '\n')
+          echo "json_versions=${json_versions}" >> $GITHUB_OUTPUT
 
       - name: Generate README.md
         run: |
@@ -43,10 +57,10 @@ jobs:
 
   build:
     runs-on: ubuntu-latest
-    needs: get-versions
+    needs: fetch-versions
     strategy:
       matrix:
-        version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
+        version: ${{ fromJSON(needs.fetch-versions.outputs.json_versions) }}
 
     steps:
       - name: Set environment variable
