--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -19,8 +19,23 @@ jobs:
       - name: Fetch versions
         id: get_versions
         run: |
-          versions=$(curl -L -s "https://hub.spigotmc.org/versions/" | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V | jq -R -s 'split("\n") | .[:-1]' | tr -d '\n')
-          echo "versions=${versions}" >> $GITHUB_OUTPUT
+          versions_raw=$(curl -L -s https://hub.spigotmc.org/versions/ | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V -r)
+
+          builds=()
+          versions=()
+
+          for version in $versions_raw; do
+              build=$(curl -L -s "https://hub.spigotmc.org/versions/${version}.json" | jq -r '.name')
+
+              if [[ ! " ${builds[@]} " =~ " ${build} " ]]; then
+                  builds+=("$build")
+                  versions+=("$version")
+              fi
+          done
+
+          json_versions=$(printf '%s\n' "${versions[@]}" | jq -R . | jq -s -c .)
+          echo "versions=${versions}" >> $GITHUB_ENV
+          echo "versions=${json_versions}" >> $GITHUB_OUTPUT
 
   push-readme:
     runs-on: ubuntu-latest
