--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -16,6 +16,9 @@ jobs:
     outputs:
       versions: ${{ steps.get_versions.outputs.versions }}
     steps:
+      - name: Checkout repository
+        uses: actions/checkout@v4
+
       - name: Fetch versions
         id: get_versions
         run: |
@@ -34,15 +37,8 @@ jobs:
           done
 
           json_versions=$(printf '%s\n' "${versions[@]}" | jq -R . | jq -s -c .)
-          echo "versions=${versions}" >> $GITHUB_ENV
+          echo "versions=${versions[*]}" >> $GITHUB_ENV
           echo "versions=${json_versions}" >> $GITHUB_OUTPUT
-
-  push-readme:
-    runs-on: ubuntu-latest
-    needs: get-versions
-    steps:
-      - name: Checkout repository
-        uses: actions/checkout@v4
 
       - name: Generate README.md
         run: |
