--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -2,9 +2,8 @@ name: Spigot Build
 
 on:
   schedule:
-    - cron: "0 0 */4 * *"
+    - cron: "0 0 * * *"
   workflow_dispatch:
-  push:
 
 permissions:
   packages: write
@@ -19,38 +18,26 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v4
 
-      - name: Fetch versions
-        id: get_versions
+      - name: Fetch versions to build and generate README.md
         run: |
-          versions_raw=$(curl -L -s https://hub.spigotmc.org/versions/ | grep -oP '(?<=href=")[^"]*' | grep -E '^[0-9]+\.[0-9]+(\.[0-9]+)?' | grep -v '-' | sed 's/.json//' | sort -V -r)
+          chmod +x FETCH.sh
+          ./FETCH.sh
 
-          builds=()
-          versions=()
-
-          for version in $versions_raw; do
-              build=$(curl -L -s "https://hub.spigotmc.org/versions/${version}.json" | jq -r '.name')
-
-              if [[ ! " ${builds[@]} " =~ " ${build} " ]]; then
-                  builds+=("$build")
-                  versions+=("$version")
-              fi
-          done
-
-          json_versions=$(printf '%s\n' "${versions[@]}" | jq -R . | jq -s -c .)
-          echo "versions=${versions[*]}" >> $GITHUB_ENV
-          echo "versions=${json_versions}" >> $GITHUB_OUTPUT
-
-      - name: Generate README.md
-        run: |
-          chmod +x README.sh
-          ./README.sh
-
-      - name: Create Release
+      - name: Upload README.md to release
         uses: softprops/action-gh-release@v2
         with:
           name: Spigot
           tag_name: Spigot
           body_path: README.md
+
+      - name: Push builds to release branch
+        run: |
+          (echo -e "# Spigot Build\n\nThis project provides an automated build of Spigot Minecraft Server, scheduled to build every days.\n\nThe latest build is available in [release](https://github.com/doandat943/spigot-build/releases/latest).\n\n"; cat README.md) > temp_file && mv temp_file README.md
+          git config user.name "github-actions"
+          git config user.email "41898282+github-actions@users.noreply.github.com"
+          git add README.md
+          git commit -m "Update ${{ env.date }} to latest build"
+          git push
 
   build:
     runs-on: ubuntu-latest
