--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -19,6 +19,7 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Fetch versions to build and generate README.md
+        id: get_versions
         run: |
           chmod +x FETCH.sh
           ./FETCH.sh
