--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -13,13 +13,13 @@ jobs:
   get-versions:
     runs-on: ubuntu-latest
     outputs:
-      versions: ${{ steps.get_versions.outputs.versions }}
+      versions: ${{ steps.fetch_versions.outputs.versions }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
 
       - name: Fetch versions to build and generate README.md
-        id: get_versions
+        id: fetch_versions
         run: |
           chmod +x FETCH.sh
           ./FETCH.sh
@@ -45,7 +45,7 @@ jobs:
     needs: get-versions
     strategy:
       matrix:
-        version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
+        version: ${{ fromJSON(needs.fetch_versions.outputs.versions) }}
 
     steps:
       - name: Set environment variable
