--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -13,7 +13,9 @@ jobs:
   get-versions:
     runs-on: ubuntu-latest
     outputs:
+      builds: ${{ steps.fetch_versions.outputs.builds }}
       versions: ${{ steps.fetch_versions.outputs.versions }}
+      versions_to_build: ${{ steps.fetch_versions.outputs.versions_to_build }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
@@ -27,10 +29,10 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: get-versions
-    if: needs.get-versions.outputs.versions != ''
+    if: needs.get-versions.outputs.versions_to_build != ''
     strategy:
       matrix:
-        version: ${{ fromJSON(needs.get-versions.outputs.versions) }}
+        version: ${{ fromJSON(needs.get-versions.outputs.versions_to_build) }}
     steps:
       - name: Set environment variable
         run: |
