--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -75,7 +75,10 @@ jobs:
         uses: actions/checkout@v4
         
       - name: Fetch versions to build and generate README.md
-        id: fetch_versions
+        env:
+          builds: ${{needs.get-versions.outputs.versions_to_build}}
+          versions: ${{needs.get-versions.outputs.versions_to_build}}
+          versions_to_build: ${{needs.get-versions.outputs.versions_to_build}}
         run: |
           chmod +x README.sh
           ./README.sh
