--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -76,9 +76,9 @@ jobs:
         
       - name: Fetch versions to build and generate README.md
         env:
-          builds: ${{needs.get-versions.outputs.versions_to_build}}
-          versions: ${{needs.get-versions.outputs.versions_to_build}}
-          versions_to_build: ${{needs.get-versions.outputs.versions_to_build}}
+          builds: ${{needs.build.outputs.versions_to_build}}
+          versions: ${{needs.build.outputs.versions_to_build}}
+          versions_to_build: ${{needs.build.outputs.versions_to_build}}
         run: |
           chmod +x README.sh
           ./README.sh
