--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -69,16 +69,16 @@ jobs:
 
   readme:
     runs-on: ubuntu-latest
-    needs: build
+    needs: [get-versions, build]
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         
       - name: Fetch versions to build and generate README.md
         env:
-          builds: ${{needs.build.outputs.versions_to_build}}
-          versions: ${{needs.build.outputs.versions_to_build}}
-          versions_to_build: ${{needs.build.outputs.versions_to_build}}
+          builds: ${{needs.get-versions.outputs.versions_to_build}}
+          versions: ${{needs.get-versions.outputs.versions_to_build}}
+          versions_to_build: ${{needs.get-versions.outputs.versions_to_build}}
         run: |
           chmod +x README.sh
           ./README.sh
