--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -29,7 +29,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     needs: fetch_versions
-    if: needs.fetch_versions.outputs.versions_to_build != ''
+    if: fromJSON(needs.fetch_versions.outputs.versions_to_build) != null
     strategy:
       matrix:
         version: ${{ fromJSON(needs.fetch_versions.outputs.versions_to_build) }}
