--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -1,10 +1,12 @@
 name: Spigot Build
 
 on:
+  workflow_dispatch:
   schedule:
     - cron: "0 0 * * *"
-  workflow_dispatch:
   push:
+    paths-ignore:
+      - "README.md"
 
 permissions:
   packages: write
