--- a/.github/workflows/SpigotBuild.yml
+++ b/.github/workflows/SpigotBuild.yml
@@ -6,7 +6,7 @@ on:
     - cron: "0 0 * * *"
   push:
     paths-ignore:
-      - '**/README.md'
+      - 'README.md'
 
 permissions:
   packages: write
